# central-mcp

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  README_KO.md  ROADMAP.md  feedback.md  mkdocs.yml  pyproject.toml  registry.yaml
.claude/: settings.json
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: docs.yml
docs/: ROADMAP.ko.md  ROADMAP.md  changelog.md  cli.ko.md  cli.md  index.ko.md  index.md  install.sh  mcp-tools.ko.md  mcp-tools.md  observation.ko.md  observation.md  quickstart.ko.md  quickstart.md  robots.txt  site.webmanifest
docs/architecture/: cmux-layout-schema.md  gemini-session-research.md  mcp-2026-spec-prep.md  workspaces.ko.md  workspaces.md
docs/js/: hero.js
docs/stylesheets/: extra.css
docs/superpowers/specs/: 2026-04-22-workspaces-design.md
examples/clients/: claude-code.md  codex.md  cursor.md  gemini.md
overrides/: main.html
src/central_mcp/: __init__.py  __main__.py  agents.py  brief.py  cli.py  cmux.py  config.py  dispatches_db.py  events.py  grid.py  install.py  layout.py  monitor.py  orch_session.py  paths.py  preamble.py  pty_sessions.py  registry.py  scrub.py  server.py  session_info.py  tasks_adapter.py  tasks_protocol.py  tmux.py  tokens_db.py  upgrade.py  watch.py  zellij.py
src/central_mcp/adapters/: __init__.py  base.py
src/central_mcp/cli/: __init__.py  _commands.py
src/central_mcp/data/: AGENTS.md  CLAUDE.md  hermes-skill.md  (+1 more)
tests/: conftest.py  test_adapters.py  test_adapters_live.py  test_agents.py  test_cli_e2e.py  test_cli_tui.py  test_cmux.py  test_config.py  test_dispatch.py  test_dispatch_live.py  test_dispatches_db.py  test_events.py  test_grid.py  test_install.py  test_layout.py  test_monitor.py  test_orch_session.py  test_orchestration.py  test_orchestrator_fallback.py  test_paths.py  test_pty_sessions.py  test_quota.py  test_quota_render.py  test_quota_snapshot.py  test_registry.py  test_scrub.py  test_server_workspace.py  test_session_info.py  test_tasks_adapter.py  test_tasks_protocol.py  test_token_usage.py  test_tokens_db.py  test_upgrade.py  test_upgrade_check.py  test_user_preferences.py  test_watch.py  test_workspace_picker.py  test_zellij.py
(+12 files in other folders)
