[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "central-mcp"
version = "0.0.1"
description = "Orchestrator-agnostic MCP hub for managing and dispatching to multiple coding agents."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "andy" }]
dependencies = [
    "fastmcp>=0.2.0",
    "pyyaml>=6.0",
    "ruamel.yaml>=0.18",
    "tomlkit>=0.13",
]

[project.scripts]
central-mcp = "central_mcp.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/central_mcp"]
