[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "central-mcp"
version = "0.7.0"
description = "Orchestrator-agnostic MCP hub for managing and dispatching to multiple coding agents."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "andy5090", email = "andy@andineering.com" }]
keywords = ["mcp", "agent", "coding-agent", "claude", "codex", "gemini", "opencode", "orchestrator"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Utilities",
]
dependencies = [
    "fastmcp>=0.2.0",
    "pyyaml>=6.0",
    "ruamel.yaml>=0.18",
    "tomlkit>=0.13",
]

[project.urls]
Homepage = "https://github.com/andy5090/central-mcp"
Repository = "https://github.com/andy5090/central-mcp"
Issues = "https://github.com/andy5090/central-mcp/issues"

[project.scripts]
central-mcp = "central_mcp.cli:main"

[dependency-groups]
dev = [
    "pytest>=8",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q -m 'not live'"
markers = [
    "live: exercises real installed agent CLIs (opt in with `-m live`; requires binaries on PATH)",
]

[tool.hatch.build.targets.wheel]
packages = ["src/central_mcp"]
